kometa ribbon priority

--- a/argocd/apps/media-server/kometa/manifests/config-kometa.yaml
+++ b/argocd/apps/media-server/kometa/manifests/config-kometa.yaml
@@ -50,8 +50,8 @@ data:
             use_cesar: false
             use_berlinale: false
             use_bafta: false
-              #weight_letterboxd: 200
-              #weight_imbd: 300
+            weight_letterboxd: 200
+            weight_imbd: 300
     
         - pmm: versions
           template_variables:
