--- a/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/http-route.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/http-route.yaml
@@ -16,7 +16,7 @@ spec:
       namespace: istio-system
       sectionName: https
   hostnames:
-    - vmk8s.yanello.net
+    - vm.yanello.net
   rules:
     - backendRefs:
         - name: vmsingle-victoria-metrics-k8s-stack
@@ -39,26 +39,10 @@ spec:
       namespace: istio-system
       sectionName: https
   hostnames:
-    - grafanak8s.yanello.net
+    - grafana.yanello.net
   rules:
     - backendRefs:
         - name: victoria-metrics-k8s-stack-grafana
           namespace: monitoring
           port: 80
 ---
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: vminflux-httproute
-spec:
-  parentRefs:
-    - name: gateway-api
-      namespace: istio-system
-      sectionName: https
-  hostnames:
-    - vminflux.yanello.net
-  rules:
-    - backendRefs:
-        - name: vmsingle-victoria-metrics-k8s-stack
-          namespace: monitoring
-          port: 8428
