--- a/argocd/apps/infra/monitoring/opentelemetry/values.yaml
+++ b/argocd/apps/infra/monitoring/opentelemetry/values.yaml
@@ -11,35 +11,35 @@ presets:
     enabled: true
   logsCollection:
     enabled: true
-config:
-  # deltatocumulative processor is needed to convert metrics with delta temporality to cumulative temporality.
-  # VictoriaMetrics doesn't support delta temporality. Skip this processor if you don't use delta temporality.
-  processors:
-    deltatocumulative:
-      max_stale: 5m
-  receivers:
-    otlp:
-      protocols:
-        grpc:
-          endpoint: 0.0.0.0:4317
-        http:
-          endpoint: 0.0.0.0:4318
-  exporters:
-    otlphttp/victoriametrics:
-      compression: gzip
-      encoding: proto
-      # Setting below will work for sending data to VictoriaMetrics single-node version.
-      # Cluster version of VictoriaMetrics will require a different URL - https://docs.victoriametrics.com/cluster-victoriametrics/#url-format
-      metrics_endpoint: http://victoria-metrics-victoria-metrics-single-server.default.svc.cluster.local:8428/opentelemetry/v1/metrics
-      logs_endpoint: http://victoria-logs-victoria-logs-single-server.default.svc.cluster.local:9428/insert/opentelemetry/v1/logs
-      tls:
-        insecure: true
-  service:
-    pipelines:
-      logs:
-        processors: []
-        exporters: [otlphttp/victoriametrics]
-      metrics:
-        receivers: [otlp]
-        processors: [deltatocumulative]
-        exporters: [otlphttp/victoriametrics]
+# config:
+#   # deltatocumulative processor is needed to convert metrics with delta temporality to cumulative temporality.
+#   # VictoriaMetrics doesn't support delta temporality. Skip this processor if you don't use delta temporality.
+#   processors:
+#     deltatocumulative:
+#       max_stale: 5m
+#   receivers:
+#     otlp:
+#       protocols:
+#         grpc:
+#           endpoint: 0.0.0.0:4317
+#         http:
+#           endpoint: 0.0.0.0:4318
+#   exporters:
+#     otlphttp/victoriametrics:
+#       compression: gzip
+#       encoding: proto
+#       # Setting below will work for sending data to VictoriaMetrics single-node version.
+#       # Cluster version of VictoriaMetrics will require a different URL - https://docs.victoriametrics.com/cluster-victoriametrics/#url-format
+#       metrics_endpoint: http://victoria-metrics-victoria-metrics-single-server.default.svc.cluster.local:8428/opentelemetry/v1/metrics
+#       logs_endpoint: http://victoria-logs-victoria-logs-single-server.default.svc.cluster.local:9428/insert/opentelemetry/v1/logs
+#       tls:
+#         insecure: true
+#   service:
+#     pipelines:
+#       logs:
+#         processors: []
+#         exporters: [otlphttp/victoriametrics]
+#       metrics:
+#         receivers: [otlp]
+#         processors: [deltatocumulative]
+#         exporters: [otlphttp/victoriametrics]
