--- a/argocd/apps/infra/monitoring/opentelemetry/values.yaml
+++ b/argocd/apps/infra/monitoring/opentelemetry/values.yaml
@@ -1,6 +1,6 @@
-# manager:
-#   collectorImage:
-#     repository: otel/opentelemetry-collector-k8s
+manager:
+  collectorImage:
+    repository: otel/opentelemetry-collector-k8s
     
 # admissionWebhooks:
 #   certManager:
