--- a/argocd/apps/infra/monitoring/opentelemetry/kustomization.yaml
+++ b/argocd/apps/infra/monitoring/opentelemetry/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+resources:
+  - manifests/collector.yaml
+
 helmCharts:
   - name: opentelemetry-operator
     releaseName: opentelemetry-operator
