--- a/argocd/apps/infra/monitoring/opentelemetry/manifests/collector.yaml
+++ b/argocd/apps/infra/monitoring/opentelemetry/manifests/collector.yaml
@@ -15,6 +15,6 @@ spec:
     service:
       pipelines:
         traces:
-          receivers: [jaeger]
+          receivers: []
           processors: []
-          exporters: [debug]
+          exporters: []
