--- a/argocd/apps/infra/monitoring/opentelemetry/manifests/collector.yaml
+++ b/argocd/apps/infra/monitoring/opentelemetry/manifests/collector.yaml
@@ -17,4 +17,4 @@ spec:
         traces:
           receivers: []
           processors: []
-          exporters: []
+          exporters: [otlphttp]
