gitea image secrets appset6

--- a/argocd/apps/infra/gitea/image-pull-secrets/app-set.yaml
+++ b/argocd/apps/infra/gitea/image-pull-secrets/app-set.yaml
@@ -8,6 +8,7 @@ spec:
     - list:
         elements:
           - namespace: backstage
+          - namespace: dollardollar-dev
   template:
     metadata:
       name: "{{namespace}}-gitea-pull-secrets"
