--- a/argocd/apps/infra/gitea/kustomization.yaml
+++ b/argocd/apps/infra/gitea/kustomization.yaml
@@ -15,3 +15,8 @@ helmCharts:
     releaseName: gitea
     namespace: gitea
     valuesFile: ./manifests/values.yaml
+  - name: gitea-actions
+    repo: https://dl.gitea.com/charts/
+    version: "0.0.0"
+    releaseName: gitea-actions
+    namespace: gitea
