--- a/argocd/apps/backstage/kustomization.yaml
+++ b/argocd/apps/backstage/kustomization.yaml
@@ -3,7 +3,8 @@ kind: Kustomization
 
 resources:
   - ./manifests/http-route.yaml
-
+  #- ./manifests/cm.yaml
+  
 helmCharts:
   - name: backstage
     namespace: backstage
@@ -12,8 +13,9 @@ helmCharts:
     version: "2.5.0"
     valuesInline:
       backstage:
-        appConfig:
-          - configMapRef: app-config
+        # extraAppConfig:
+        #   - filename: app-config.yaml
+        #     configMapRef: app-config
         image:
           registry: gitea.yanello.net
           repository: marcus/backstage
