--- a/argocd/apps/backstage/kustomization.yaml
+++ b/argocd/apps/backstage/kustomization.yaml
@@ -3,7 +3,8 @@ kind: Kustomization
 
 resources:
   - ./manifests/http-route.yaml
-
+  - ./manifests/cm.yaml
+  
 helmCharts:
   - name: backstage
     namespace: backstage
