--- a/argocd/apps/backstage/kustomization.yaml
+++ b/argocd/apps/backstage/kustomization.yaml
@@ -13,9 +13,9 @@ helmCharts:
     version: "2.5.0"
     valuesInline:
       backstage:
-        extraAppConfig:
-          - filename: app-config.yaml
-            configMapRef: app-config
+        # extraAppConfig:
+        #   - filename: app-config.yaml
+        #     configMapRef: app-config
         image:
           registry: gitea.yanello.net
           repository: marcus/backstage
