--- a/argocd/apps/backstage/kustomization.yaml
+++ b/argocd/apps/backstage/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 resources:
   - ./manifests/http-route.yaml
-  - ./manifests/cm.yaml
+  #- ./manifests/cm.yaml
   
 helmCharts:
   - name: backstage
