--- a/argocd/apps/backstage/kustomization.yaml
+++ b/argocd/apps/backstage/kustomization.yaml
@@ -16,6 +16,8 @@ helmCharts:
         # extraAppConfig:
         #   - filename: app-config.yaml
         #     configMapRef: app-config
+        serviceAccount:
+          create: true
         image:
           registry: gitea.yanello.net
           repository: marcus/backstage
