--- a/argocd/apps/backstage/kustomization.yaml
+++ b/argocd/apps/backstage/kustomization.yaml
@@ -23,4 +23,4 @@ helmCharts:
           pullSecrets:
             - gitea-pull-secrets
       serviceAccount:
-          create: 'true'
+          create: true
