--- a/argocd/apps/backstage/kustomization.yaml
+++ b/argocd/apps/backstage/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 
 resources:
   - ./manifests/http-route.yaml
+  - ./manifests/rbac.yaml
   #- ./manifests/cm.yaml
   
 helmCharts:
