--- a/argocd/apps/media-server/sonarr/deploy.yaml
+++ b/argocd/apps/media-server/sonarr/deploy.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    io.kompose.service: sonarr
     app: sonarr
   name: sonarr
 spec:
@@ -10,7 +9,7 @@ spec:
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      io.kompose.service: sonarr
+      app: sonarr
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -18,11 +17,7 @@ spec:
       maxSurge: 1
   template:
     metadata:
-      annotations:
-        kompose.cmd: kompose -f sonarr.yaml convert
-        kompose.version: 1.35.0 (HEAD)
       labels:
-        io.kompose.service: sonarr
         app: sonarr
     spec:
       affinity:
@@ -81,11 +76,6 @@ spec:
         - name: config
           hostPath:
             path: /zpool/k8s/sonarr/config
-          # persistentVolumeClaim:
-          #   claimName: config
         - name: media
           hostPath:
             path: /data/media
-          # nfs:
-          #   server: marcus-server.lan
-          #   path: /data/media
