--- a/argocd/apps/media-server/unpackerr/kustomization.yaml
+++ b/argocd/apps/media-server/unpackerr/kustomization.yaml
@@ -2,8 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- deploy.yaml
-- pvc.yaml
+- manifests/deploy.yaml
+- manifests/pvc.yaml
+- manifests/cm.yaml
 
 generators:
-  -  secret-generator.yaml
+  -  manifests/secret-generator.yaml
