--- a/argocd/apps/media-server/unpackerr/manifests/pvc.yaml
+++ b/argocd/apps/media-server/unpackerr/manifests/pvc.yaml
@@ -9,15 +9,15 @@
 #   resources:
 #     requests:
 #       storage: 100Mi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: logs
-spec:
-  storageClassName: nfs-storage
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Mi
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: logs
+# spec:
+#   storageClassName: nfs-storage
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 100Mi
