--- a/argocd/apps/media-server/sonarr/service.yaml
+++ b/argocd/apps/media-server/sonarr/service.yaml
@@ -1,11 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose -f sonarr.yaml convert
-    kompose.version: 1.35.0 (HEAD)
   labels:
-    io.kompose.service: sonarr
+    app: sonarr
   name: sonarr
 spec:
   ports:
@@ -13,4 +10,4 @@ spec:
       port: 8989
       targetPort: 8989
   selector:
-    io.kompose.service: sonarr
+    app: sonarr
