--- a/argocd/apps/media-server/jellyfin/values.yaml
+++ b/argocd/apps/media-server/jellyfin/values.yaml
@@ -10,10 +10,14 @@ volumes:
   - name: media
     hostPath:
       path: /data/media
+volumeMounts:
+  - name: media
+    mountPath: /data/media
       
 persistence: 
   config:
     storageClass: local-path
   media:
     enabled: false
-    
+
+runtimeClassName: nvidia
