jellyfin storage path

--- a/argocd/apps/media-server/jellyfin/values.yaml
+++ b/argocd/apps/media-server/jellyfin/values.yaml
@@ -18,6 +18,6 @@ persistence:
   config:
     storageClass: local-path
   media:
-    enabled: false
+    storageClass: local-path
 
 runtimeClassName: nvidia
