--- a/argocd/apps/infra/monitoring/kiali/values.yaml
+++ b/argocd/apps/infra/monitoring/kiali/values.yaml
@@ -7,3 +7,8 @@ cr:
     external_services:
       prometheus:
         url: http://vmsingle-victoria-metrics-k8s-stack.monitoring.svc.cluster.local:8429
+      grafana:
+        external_url: https://grafana.yanello.net
+        internal_url: http://grafana.monitoring.svc.cluster.local:80
+    istio_namespace: istio-system
+    
