--- a/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/http-route.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/http-route.yaml
@@ -34,7 +34,7 @@ metadata:
   #   gethomepage.dev/icon: victoriametrics
   #   gethomepage.dev/description: "VictoriaMetrics is a fast, cost-effective monitoring solution and time series database."
   #   gethomepage.dev/pod-selector: app.kubernetes.io/name=vmsingle
-  name: vm-httproute
+  name: vmagent-httproute
 spec:
   parentRefs:
     - name: gateway-api
