--- a/argocd/apps/media-server/jellyfin/kustomization.yaml
+++ b/argocd/apps/media-server/jellyfin/kustomization.yaml
@@ -4,10 +4,10 @@ kind: Kustomization
 resources:
   - ./manifests/http-route.yaml
 
-helmCharts:
-    - name: jellyfin
-      repo: https://jellyfin.github.io/jellyfin-helm
-      version: "2.3.0"
-      releaseName: jellyfin
-      namespace: jellyfin
-      valuesFile: values.yaml
+# helmCharts:
+#     - name: jellyfin
+#       repo: https://jellyfin.github.io/jellyfin-helm
+#       version: "2.3.0"
+#       releaseName: jellyfin
+#       namespace: jellyfin
+#       valuesFile: values.yaml
