--- a/argocd/apps/infra/istio/resources/vmagent.yaml
+++ b/argocd/apps/infra/istio/resources/vmagent.yaml
@@ -13,10 +13,10 @@ spec:
   podMetricsEndpoints:
   - path: /stats/prometheus
     interval: 15s
-    # relabelConfigs:
-    # - action: keep
-    #   sourceLabels: [__meta_kubernetes_pod_container_name]
-    #   regex: "istio-proxy"
+    relabelConfigs:
+    - action: keep
+      sourceLabels: [__meta_kubernetes_pod_container_name]
+      regex: "istio-proxy"
     # - action: keep
     #   sourceLabels: [__meta_kubernetes_pod_annotationpresent_prometheus_io_scrape]
     #   regex: true
@@ -26,9 +26,9 @@ kind: VMServiceScrape
 metadata:
   name: istio-gateways
 spec:
-  selector:
-    matchLabels:
-      gateway.networking.k8s.io/gateway-name: gateway-api
+  # selector:
+  #   matchLabels:
+  #     gateway.networking.k8s.io/gateway-name: gateway-api
   namespaceSelector:
     matchNames:
     - istio-system
