move qbit back to media appset

--- a/argocd/apps/media-server/qbittorrent/kustomization.yaml
+++ b/argocd/apps/media-server/qbittorrent/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - manifests/pvc.yaml
   - manifests/net-policy.yaml
   - manifests/http-route.yaml
+  - manifests/ns.yaml
   
 generators:
   - manifests/secret-generator.yaml
