unpackerr istio off

--- a/argocd/apps/media-server/unpackerr/kustomization.yaml
+++ b/argocd/apps/media-server/unpackerr/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - manifests/deploy.yaml
 - manifests/pvc.yaml
 - manifests/cm.yaml
+- manifests/ns.yaml
 
 generators:
   -  manifests/secret-generator.yaml
