--- a/argocd/apps/dev/linkerd/kustomization.yaml
+++ b/argocd/apps/dev/linkerd/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:
-  - manifests/cert.yaml
+# resources:
+#   - manifests/cert.yaml
 
 helmCharts:
   - name: linkerd-crds
