--- a/argocd/apps/dev/linkerd/kustomization.yaml
+++ b/argocd/apps/dev/linkerd/kustomization.yaml
@@ -3,7 +3,8 @@ kind: Kustomization
 
 resources:
   - manifests/cert.yaml
-
+  - manifests/ns.yaml
+  
 helmCharts:
   - name: linkerd-crds
     repo: https://helm.linkerd.io/stable
