--- a/argocd/apps/dev/linkerd/manifests/ns.yaml
+++ b/argocd/apps/dev/linkerd/manifests/ns.yaml
@@ -3,5 +3,5 @@ kind: Namespace
 metadata:
   name: linkerd
   labels:
-    linkerd.io/is-control-plane: true
+    linkerd.io/is-control-plane: 'true'
 
