appset part of label

--- a/argocd/apps/infra/gitea/image-pull-secrets/app-set.yaml
+++ b/argocd/apps/infra/gitea/image-pull-secrets/app-set.yaml
@@ -12,6 +12,8 @@ spec:
   template:
     metadata:
       name: "{{namespace}}-gitea-pull-secrets"
+      labels:
+        app.kubernetes.io/part-of: "{{namespace}}-app"
     spec:
       project: default
       syncPolicy:
