--- a/argocd/apps/dev/dollardollar/kustomization.yaml
+++ b/argocd/apps/dev/dollardollar/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   
 generators:
   - ./manifests/secret-generator.yaml
+  - ../infra/gitea/image-pull-secrets/manifests/secret-generator.yaml
   
 images:
   - name: docker.cloudsmith.io/myanello/apps/dollar
