--- a/argocd/apps/dev/linkerd/kustomization.yaml
+++ b/argocd/apps/dev/linkerd/kustomization.yaml
@@ -7,12 +7,12 @@ resources:
   
 helmCharts:
   - name: linkerd-crds
-    repo: https://helm.linkerd.io/stable
-    version: "1.8.0"
+    repo: https://helm.linkerd.io/edge
+    version: "2025.4.2"
     namespace: linkerd
   - name: linkerd-control-plane
-    repo: https://helm.linkerd.io/stable
-    version: "1.16.11"
+    repo: https://helm.linkerd.io/edge
+    version: "2025.4.2"
     namespace: linkerd
     valuesInline:
       identity:
