--- a/argocd/apps/dev/bookinfo/platform/kube/bookinfo-certificate.yaml
+++ b/argocd/apps/dev/bookinfo/platform/kube/bookinfo-certificate.yaml
@@ -16,7 +16,7 @@
 #     # Enable the HTTP-01 challenge provider
 #     http01: {}
 # ---
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: istio-ingressgateway-certs
