--- a/argocd/apps/infra/krr/cronjob.yaml
+++ b/argocd/apps/infra/krr/cronjob.yaml
@@ -12,6 +12,8 @@ spec:
     spec:
       ttlSecondsAfterFinished: 86400
       template:
+        spec:
+          restartPolicy: Never
         metadata:
           labels:
             app: krr
@@ -28,7 +30,6 @@ spec:
               memory: 2Gi
             requests:
               memory: 1Gi
-      restartPolicy: Never
       serviceAccount: krr-service-account
       serviceAccountName: krr-service-account
 
