--- a/argocd/apps/fooocus/kustomization.yaml
+++ b/argocd/apps/fooocus/kustomization.yaml
@@ -5,3 +5,8 @@ resources:
   - ./manifests/sts.yaml
   - ./manifests/svc.yaml
   - ./manifests/http-route.yaml
+
+replicas:
+  - name: fooocus
+    count: 0
+  
