--- a/argocd/apps/media-server/unpackerr/manifests/deploy.yaml
+++ b/argocd/apps/media-server/unpackerr/manifests/deploy.yaml
@@ -56,19 +56,18 @@ spec:
               memory: 50Mi
           name: unpackerr
           volumeMounts:
-            - mountPath: /config
+            - mountPath: /config/unpackerr.conf
               name: config
             - mountPath: /data/media
               name: media
-            # - name: logs
-            #   mountPath: /data/logs
+            - name: logs
+              mountPath: /data/logs
       volumes:
         - name: config
           configMap:
             name: config
-        # - name: logs
-        #   persistentVolumeClaim:
-        #     claimName: logs
+        - name: logs
+          emptyDir: {}
         - name: media
           nfs:
             server: marcus-server.lan
